[project]
name = "my-first-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Per",email = "bebrich66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79            
select = ["E", "F", "I"]    # категории проверок (Errors, Flake8, Imports)

